# stratego.io

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Gruntfile.coffee  LICENSE  README.md  bower.json  build.py  index.html  package-lock.json  package.json  stratego.sublime-project
.github/workflows/: deploy-pages.yml
app/: api.py  app.yaml  models.py  moveTypes.py  move_types.py  queue.yaml
app/utils/: board_utils.py  general.py  pusher_utils.py  status_codes.py
backTest/: FIXTURES.py  api_test.py  fixtures.py  game_test.py  models_test.py
chrome/: manifest.json
client/: Cargo.toml  build.rs  index.html
client/src/: api.rs  app.rs  config.rs  main.rs  poll.rs  ws.rs
client/src/components/: board.rs  connection.rs  game.rs  grid.rs  home.rs  loading.rs  mod.rs  overlay.rs  piece.rs  setup.rs
client/style/: graphics.css  main.css
css/: attack.less  cell.less  console.less  game-dialog.less  game.less  grid.less  home.less  loading.less  main.less  panel.less  setup.less  styles.less  variables.less
design/: stratego.bmpr
frontTest/: index.html  testBundle.js
frontTest/specs/: Board.spec.js  Game.spec.coffee  Piece.spec.js  Setup.spec.coffee
gae/: api.py  app.yaml  models.py  queue.yaml
gae/CONSTANTS/: GAME_STATES.py
gae/tests/: api_test.py  models_test.py
gae/utils/: board_utils.py
html/: index.html
jade/: attack.jade  board.jade  game.jade  gameDialog.jade  githubLink.jade  grid.jade  homeTextbox.jade  loading.jade  lostPiece.jade  panelOption.jade  phantomPiece.jade  piece.jade  setup.jade  setupTextbox.jade  wonPiece.jade
jade/mixins/: piece.jade
js/: Board.coffee  BoardView.coffee  HomeView.coffee  PanelView.coffee  Piece.coffee  Router.coffee  SetupView.coffee  gameStates.coffee  main.coffee  moveTypes.coffee  pusherWrapper.coffee  ranks.coffee
js/controllers/: GridController.coffee
js/models/: Game.coffee  GameSetup.coffee  Setup.coffee
js/panel/: PanelButtonView.coffee  PanelLinkView.coffee  PanelOptionView.coffee  PanelTextboxView.coffee  PanelView.coffee
js/views/: GameView.coffee  (+10 more)
src/: api.rs  board_utils.rs  build.rs  constants.rs  game_logic.rs  lib.rs  main.rs  models.rs  storage.rs  websocket.rs
test/: SpecRunner.js  index.html
(+10 files in other folders)
