[workspace]
members = ["client"]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"

[package]
name = "stratego"
version.workspace = true
edition.workspace = true

[lib]
name = "stratego"
path = "src/lib.rs"

[[bin]]
name = "stratego"
path = "src/main.rs"
required-features = ["server"]

[features]
default = ["server"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:dashmap",
    "dep:chrono",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:futures-util",
    "dep:clap",
    "dep:base64",
    "dep:uuid",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
dashmap = { version = "6", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
base64 = { version = "0.22.1", optional = true }
