[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
stratego = { path = "..", default-features = false }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Event",
    "DragEvent",
    "DataTransfer",
    "HtmlElement",
    "Storage",
    "Window",
    "Document",
    "Element",
    "CssStyleDeclaration",
    "DomRect",
    "Location",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
    "console",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
